++gewoehnliche Editor-Autosaves ignorieren

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+#
+# 'git ls-files -i --exclude-standard' aufrufen,
+# falls unsicher, ob nac Aenderung zu viel ignoriert wird.
+#
+# Jedes Unterverzeichnis kann auch eine extra .gitignore-Datei
+# beinhalten.
+#
+*~
+*.bak
+Backup
+backup
 *.pdf
 *.class
 bin
